# PHY-LLM-verifier

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  help.md  pyproject.toml
configs/model/: qwen2_5_8b_sft.yaml
configs/train/: deepspeed_zero2.json  sft.yaml
data/processed/: test.jsonl  train.jsonl  val.jsonl
docker-env/: Dockerfile  requirements.txt
magnus/: start.md
scripts/: 01_prepare_data.sh  02_train_sft.sh  03_generate_pred.sh  04_eval.sh
src/: schema.py
src/data/: build_sft_dataset.py
src/eval/: generate_predictions.py  metrics.py
src/train/: run_sft.py
tests/: test_schema.py
